--- a/Krovlia/scss/fonts.scss
+++ b/Krovlia/scss/fonts.scss
@@ -1,2 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@font-face {
+    font-family: Helvetica; /* Имя шрифта */
+    src: url(fonts/HelveticaNeueCyr-Light.otf); /* Путь к файлу со шрифтом */
+   }
