--- a/Krovlia/scss/style.css
+++ b/Krovlia/scss/style.css
@@ -40,6 +40,41 @@ header {
       header .header_cont .header-main .nav-menu {
         text-align: right;
         padding-top: 20px; }
+        header .header_cont .header-main .nav-menu .nav-toggle {
+          display: none;
+          background: #e0182a;
+          height: 30px; }
+          header .header_cont .header-main .nav-menu .nav-toggle .nt_cont {
+            width: 360px;
+            margin: 0 auto;
+            text-align: left;
+            max-width: 300px;
+            cursor: pointer; }
+          header .header_cont .header-main .nav-menu .nav-toggle a {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            color: #ffffff;
+            text-decoration: none;
+            line-height: 30px; }
+          header .header_cont .header-main .nav-menu .nav-toggle .h-icon {
+            border-top: 2px solid #ffffff;
+            border-bottom: 2px solid #ffffff;
+            width: 25px;
+            height: 12px;
+            cursor: pointer;
+            position: relative;
+            margin: 7px auto;
+            float: right; }
+            header .header_cont .header-main .nav-menu .nav-toggle .h-icon:before {
+              content: '';
+              display: inline-block;
+              position: absolute;
+              top: 50%;
+              left: 0px;
+              width: 100%;
+              border-top: 2px #ffffff solid;
+              margin-top: -1px; }
         header .header_cont .header-main .nav-menu nav ul li {
           display: inline-block;
           margin: 0 25px; }
@@ -57,6 +92,7 @@ header {
 .banner {
   background: url(images/banner.jpg);
   background-size: cover;
+  background-position-y: 14%;
   min-height: 700px; }
   .banner .banner_cont {
     width: 650px;
@@ -102,7 +138,7 @@ header {
     margin: 0 auto;
     padding: 100px 0;
     height: 425px;
-    background: url(images/home.png) 69% 67% no-repeat;
+    background: url(images/home.png) 63% 67% no-repeat;
     position: relative; }
     .block1 .block1_cont img {
       position: absolute;
@@ -162,20 +198,20 @@ header {
         width: 360px;
         position: relative;
         margin-bottom: 15px; }
+        .block1 .block1_cont .form-1 .input input {
+          height: 40px;
+          width: 290px;
+          border: 0;
+          border-radius: 3px;
+          padding: 0 15px; }
         .block1 .block1_cont .form-1 .input input, .block1 .block1_cont .form-1 .input label {
           position: absolute;
           top: 0;
           left: 20px; }
-        .block1 .block1_cont .form-1 .input input {
-          height: 40px;
-          width: 320px;
-          border: 0;
-          border-radius: 3px; }
-          .block1 .block1_cont .form-1 .input input:focus label {
-            display: none; }
         .block1 .block1_cont .form-1 .input label {
           top: 10px;
-          left: 35px; }
+          left: 35px;
+          cursor: text; }
       .block1 .block1_cont .form-1 button {
         border-radius: 3px;
         width: 320px;
@@ -302,7 +338,8 @@ header {
     .block5 .block5_cont .b5_blocks_cont .b5_block {
       width: 260px;
       text-align: center;
-      display: inline-block; }
+      display: inline-block;
+      margin-bottom: 5px; }
       .block5 .block5_cont .b5_blocks_cont .b5_block .b5-img {
         height: 200px;
         position: relative;
@@ -328,7 +365,15 @@ header {
       .block5 .block5_cont .b5_blocks_cont .b5_block .b5-price {
         height: 80px;
         border-top: 0;
-        padding-top: 20px; }
+        padding-top: 20px;
+        position: relative; }
+        .block5 .block5_cont .b5_blocks_cont .b5_block .b5-price .triangle {
+          display: none;
+          transform: scaleX(2);
+          color: white;
+          position: absolute;
+          top: -4px;
+          text-shadow: 0 1px 0px #dbdbdb; }
         .block5 .block5_cont .b5_blocks_cont .b5_block .b5-price p {
           color: #222222;
           font-family: "Open Sans", sans-serif;
@@ -337,6 +382,8 @@ header {
           line-height: 30px; }
           .block5 .block5_cont .b5_blocks_cont .b5_block .b5-price p span {
             color: #e0182a; }
+      .block5 .block5_cont .b5_blocks_cont .b5_block:hover .triangle {
+        display: inline-block; }
       .block5 .block5_cont .b5_blocks_cont .b5_block:hover .b5-text {
         display: block; }
       .block5 .block5_cont .b5_blocks_cont .b5_block:hover img {
@@ -439,14 +486,16 @@ header {
           left: 20px; }
         .block6 .block6_cont .b6_right .input input {
           height: 38px;
-          width: 318px;
+          width: 288px;
           border: 1px solid #dbdbdb;
-          border-radius: 3px; }
+          border-radius: 3px;
+          padding: 0 15px; }
           .block6 .block6_cont .b6_right .input input:focus label {
             display: none; }
         .block6 .block6_cont .b6_right .input label {
           top: 10px;
-          left: 35px; }
+          left: 35px;
+          cursor: text; }
       .block6 .block6_cont .b6_right button {
         border-radius: 3px;
         width: 320px;
@@ -466,7 +515,7 @@ header {
   .block7 .block7_cont {
     text-align: center;
     padding: 90px 0 40px 0;
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto; }
     .block7 .block7_cont h2 {
       font-family: "Open Sans", sans-serif;
@@ -526,7 +575,8 @@ header {
     width: 40%;
     height: 700px;
     float: left;
-    background: url(images/8-1.jpg); }
+    background: url(images/8-1.jpg);
+    background-position-x: 37%; }
   .block8 .block8_2 {
     float: left;
     width: 25%;
@@ -573,7 +623,7 @@ header {
       width: 167px;
       height: 167px;
       border: 2px solid gray;
-      margin: 0 63px;
+      margin: 15px 63px;
       display: inline-block;
       border-radius: 100%;
       vertical-align: middle;
@@ -591,5 +641,166 @@ header {
       border-color: #2e33ec; }
     .block9 .block9_cont .b9_blocks_cont .b9_block_4 {
       border-color: #ff7800; }
+
+.block10 .block10_cont {
+  max-width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 60px 0 70px 0; }
+  .block10 .block10_cont h2 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 36px;
+    font-weight: 400;
+    color: #222222;
+    margin-bottom: 30px; }
+  .block10 .block10_cont p {
+    font-family: "Times New Roman", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #222222;
+    text-align: justify;
+    line-height: 22px;
+    margin-bottom: 50px;
+    position: relative; }
+    .block10 .block10_cont p:before {
+      content: "";
+      display: block;
+      height: 115px;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff 96%); }
+  .block10 .block10_cont a {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #444444; }
+  .block10 .block10_cont span {
+    padding-left: 5px; }
+
+.block11 {
+  height: 600px; }
+  .block11 .block11_cont .map {
+    width: 60%;
+    height: 600px;
+    float: left;
+    background: url(images/map.jpg);
+    background-size: 174%;
+    background-position: 6% 25%; }
+  .block11 .block11_cont .cont-form {
+    width: 40%;
+    height: 600px;
+    float: right;
+    background: url(images/bg6.jpg); }
+    .block11 .block11_cont .cont-form form {
+      height: 425px;
+      width: 360px;
+      background: #ffffff;
+      border-radius: 9px;
+      text-align: center;
+      margin-left: 95px;
+      margin-top: 85px; }
+      .block11 .block11_cont .cont-form form h2 {
+        font-family: "Open Sans", sans-serif;
+        font-size: 30px;
+        font-weight: 600;
+        color: #655043;
+        margin-bottom: 20px;
+        padding-top: 35px; }
+      .block11 .block11_cont .cont-form form p {
+        font-family: "Open Sans", sans-serif;
+        font-size: 16px;
+        font-weight: 300;
+        color: #655043;
+        margin-bottom: 35px; }
+      .block11 .block11_cont .cont-form form .input {
+        height: 40px;
+        width: 360px;
+        position: relative;
+        margin-bottom: 15px; }
+        .block11 .block11_cont .cont-form form .input input, .block11 .block11_cont .cont-form form .input label {
+          position: absolute;
+          top: 0;
+          left: 20px; }
+        .block11 .block11_cont .cont-form form .input input {
+          height: 40px;
+          width: 290px;
+          border: 1px solid #dbdbdb;
+          border-radius: 3px;
+          padding: 0 15px; }
+          .block11 .block11_cont .cont-form form .input input:focus label {
+            display: none; }
+        .block11 .block11_cont .cont-form form .input label {
+          top: 10px;
+          left: 35px;
+          cursor: text; }
+      .block11 .block11_cont .cont-form form button {
+        border-radius: 3px;
+        width: 320px;
+        height: 50px;
+        background: #ffad1e;
+        font-family: 'Lobster', cursive;
+        font-size: 24px;
+        font-weight: 400;
+        color: #ffffff;
+        letter-spacing: 0.02em;
+        border: 0; }
+
+footer {
+  height: 195px;
+  background: #222222; }
+  footer .footer_cont .f_blocks {
+    padding-top: 50px;
+    text-align: center; }
+    footer .footer_cont .f_blocks .f_block {
+      display: inline-block;
+      margin: 0 80px; }
+  footer .footer_cont .f_block_1 {
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #bdbdbd;
+    width: 315px; }
+    footer .footer_cont .f_block_1 p {
+      margin-bottom: 10px; }
+    footer .footer_cont .f_block_1 span {
+      padding: 7px 5px; }
+  footer .footer_cont .f_block_3 {
+    text-align: left; }
+    footer .footer_cont .f_block_3 p {
+      font: 14px Helvetica;
+      color: #bebebe;
+      line-height: 24px; }
+
+.up-arr {
+  position: fixed;
+  bottom: 8%;
+  right: 5%;
+  cursor: pointer;
+  display: none; }
+
+.fixed-cf {
+  width: 330px;
+  height: 50px;
+  transform: rotate(270deg);
+  position: fixed;
+  top: 50%;
+  margin-top: -25px;
+  right: -140px;
+  background: #363636;
+  text-align: center;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px; }
+  .fixed-cf a {
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 400;
+    text-decoration: none;
+    padding-top: 15px;
+    line-height: 48px; }
 
 /*# sourceMappingURL=style.css.map */
