--- a/veza/scss/style.scss
+++ b/veza/scss/style.scss
@@ -536,6 +536,27 @@ h2{
 		display: none !important;
 	}
 }
+@media (max-width: 499px){
+	.slider1{
+		max-width: 323px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 500px) and (max-width: 659px){
+	.slider1{
+		max-width: 487px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 660px) and (max-width: 820px){
+	.slider1{
+		max-width: 652px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 @media (min-width: 769px) and (max-width: 992px){
 	header {
 		.h_right {
