--- a/veza/scss/style.css
+++ b/veza/scss/style.css
@@ -314,13 +314,44 @@ h2 {
 .slider1 {
   margin-top: 20px; }
 
+.slider2 .slick-slide {
+  width: 87px;
+  margin: 0 8px; }
+
 .slick-slide {
   width: 160px;
   margin: 0 2px; }
 
+.slider2 .slick-list {
+  max-width: 297px; }
+
 .slick-list {
   margin: 0 auto !important;
   max-width: 815px; }
+
+.slider2 .slick-prev {
+  height: 34px;
+  width: 20px;
+  border: 0;
+  background: url(images/prev.png);
+  text-indent: -9999px;
+  position: absolute;
+  left: 2px;
+  top: 15px;
+  cursor: pointer;
+  outline: none; }
+
+.slider2 .slick-next {
+  height: 34px;
+  width: 20px;
+  border: 0;
+  background: url(images/next.png);
+  text-indent: -9999px;
+  position: absolute;
+  right: 3px;
+  top: 15px;
+  cursor: pointer;
+  outline: none; }
 
 .slick-prev {
   height: 100px;
@@ -351,6 +382,8 @@ h2 {
 
 .bx-wrapper {
   margin-bottom: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
   border: 0 !important;
   box-shadow: 0 0 0 0 !important; }
 
