--- a/veza/scss/style.css
+++ b/veza/scss/style.css
@@ -456,22 +456,60 @@ h2 {
       margin-bottom: 10px; }
 
   .slick-next, .slick-prev {
-    display: none !important; } }
-@media (max-width: 499px) {
+    display: block !important; } }
+/*@media (max-width: 499px){
+	.slider1{
+		max-width: 323px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}*/
+@media (max-width: 457px) {
   .slider1 {
-    max-width: 323px;
+    max-width: 285px;
     margin-left: auto;
-    margin-right: auto; } }
-@media (min-width: 500px) and (max-width: 659px) {
+    margin-right: auto; }
+
+  .slick-list {
+    max-width: 159px; } }
+@media (min-width: 458px) and (max-width: 617px) {
   .slider1 {
-    max-width: 487px;
+    max-width: 449px;
     margin-left: auto;
-    margin-right: auto; } }
-@media (min-width: 660px) and (max-width: 820px) {
+    margin-right: auto; }
+
+  .slick-list {
+    max-width: 323px; } }
+@media (min-width: 617px) and (max-width: 777px) {
   .slider1 {
-    max-width: 652px;
+    max-width: 612px;
     margin-left: auto;
-    margin-right: auto; } }
+    margin-right: auto; }
+
+  .slick-list {
+    max-width: 486px; } }
+@media (min-width: 778px) and (max-width: 944px) {
+  .slider1 {
+    max-width: 777px;
+    margin-left: auto;
+    margin-right: auto; }
+
+  .slick-list {
+    max-width: 650px; } }
+/*@media (min-width: 500px) and (max-width: 659px){
+	.slider1{
+		max-width: 487px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 660px) and (max-width: 820px){
+	.slider1{
+		max-width: 652px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}*/
 @media (min-width: 769px) and (max-width: 992px) {
   header .h_right nav ul li a {
     font-size: 15px; }
@@ -505,6 +543,6 @@ h2 {
       margin-bottom: 10px; }
 
   .slick-next, .slick-prev {
-    display: none !important; } }
+    display: block !important; } }
 
 /*# sourceMappingURL=style.css.map */
