--- a/veza/scss/style.scss
+++ b/veza/scss/style.scss
@@ -424,7 +424,7 @@ h2{
 	height: 34px;
 	width: 20px;
 	border: 0;
-	background: url(images/prev.png);
+	background: url(images/prev.png) no-repeat;
 	text-indent: -9999px;
 	position: absolute;
     left: 2px;
@@ -436,7 +436,7 @@ h2{
 	height: 34px;
 	width: 20px;
 	border: 0;
-	background: url(images/next.png);
+	background: url(images/next.png) no-repeat;
 	text-indent: -9999px;
 	position: absolute;
     right: 3px;
