--- a/irina_larina/scss/style.css
+++ b/irina_larina/scss/style.css
@@ -7,6 +7,9 @@
 @font-face {
   font-family: ADV;
   src: url(fonts/Adventure.ttf); }
+input[type='submit'] {
+  -webkit-appearance: none; }
+
 .clearfix::after {
   content: "";
   display: table;
@@ -510,6 +513,12 @@ h2, p, span, h1, h3, h4, h5, a {
   input[type='submit'] {
     border-radius: 14px !important; } }
 @media screen and (max-width: 768px) {
+  .right-b {
+    margin-left: 1%; }
+
+  .left-b {
+    margin-right: 1%; }
+
   .b-1 {
     background-size: cover; }
     .b-1 .box-1-1 {
