--- a/irina_larina/scss/style.scss
+++ b/irina_larina/scss/style.scss
@@ -5,12 +5,20 @@ $c1: #000100;
     src: url(fonts/KabelC-Book.otf);
 }
 @font-face {
+    font-family: GA;
+    src: url(fonts/Garamonb.ttf);
+}
+@font-face {
     font-family: KV;
     src: url(fonts/KBL75_.ttf);
 }
 @font-face {
     font-family: ADV;
     src: url(fonts/Adventure.ttf);
+}
+@font-face {
+    font-family: HL;
+    src: url(fonts/helveticaneuecyr-medium.otf);
 }
 input[type='submit']{
 	-webkit-appearance: none;
@@ -601,9 +609,806 @@ h2,p,span,h1,h3,h4,h5,a{
 		}
 	}
 }
+.b-9{
+	background: url(images/bg-9.png) no-repeat;
+	/*background-attachment: fixed;*/
+	padding-top: 7.5%;
+	padding-bottom: 7%;
+	p{
+		font-size: 1.7451499118165785VW;
+		font-family: HL;
+		text-shadow: 2px 2px 25px rgba(0, 0, 0, 1);
+		line-height: 130%;
+		color: #fff;
+		text-align: center;
+	}
+}
+.b-10{
+	background: url(images/bg-10.png) no-repeat;
+	background-size: cover;
+	padding-bottom: 2.3%;
+	padding-top: 4%;
+	h2{
+		font-size: 2.0207231040564375VW;
+		font-family: KV;
+		box-shadow: 0 0 0 9999px rgba(255,255,255,0.6) inset;
+		max-width: 30%;
+		color: #872a4c;
+		text-align: center;
+		margin: 0 auto;
+		padding: 0.7% 0;
+    	border-radius: 18px;
+	}
+	.b10-cont{
+		background: url(images/bg-10-1.png) no-repeat;
+		background-size: 100%;
+		max-width: 67%;
+		margin: 0 auto;
+		background-position: center;
+		position: relative;
+		display: flex;
+    	align-items: center;
+    	justify-content: center;
+		.section{
+			text-align: center;
+			position: absolute;
+			h3{
+				font-size: 7.333774250440918VW;
+				font-family: GA;
+				color: #b64066;
+				opacity: 0.8;
+				line-height: 90%;
+			}
+			p{
+				font-size: 1.3778659611992945VW;
+				color: $c1;
+				line-height: 130%;
+			}
+		}
+		.section-1{
+			left: 5%;
+			top: 4%;
+		}
+		.section-2{
+			top: 4%;
+			right: 1%;
+		}
+		.section-3{
+			right: 5%;
+			bottom: 5%;
+		}
+		.section-4{
+			left: 7%;
+			bottom: 15%;
+		}
+		.b10-video{
+			width: 42%;
+    		height: 350px;
+    		background: #662d91;
+		}
+		.play-3{
+			position: absolute;
+			bottom: 1%;
+			width: 48%;
+		}
+		.left-b{
+			margin-right: 3%;
+			width: 12.5%;
+		}
+		.right-b{
+			margin-left: 3%;
+			width: 12.5%;
+		}
+		input[type='submit']{
+			font-size: 1.6534391534391533VW;
+			margin-top: 1.4%;
+			padding: 2.5% 6.5%;
+			text-align: center;
+			color: #fff;
+			font-family: KV;
+			font-weight: bold;
+			background: #b64066;
+			border-radius: 20px;
+			border: 0;
+			max-width: 80%;
+		}
+		.b10-video iframe{
+        	width: 100% !important;
+        	height: 100% !important;
+		}
+	}
+}
+.b-11{
+	background: url(images/bg-11.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-top: 2.2%;
+    padding-bottom: 3%;
+	.b11-title{
+		text-align: center;
+		margin-bottom: 2%;
+		img{
+			display: inline-block;
+			vertical-align: middle;
+			margin: 0 1%;
+			width: 2.4%;
+		}
+		h2{
+			font-size: 2.204585537918871VW;
+			color: #b64066;
+			display: inline-block;
+			vertical-align: middle;
+		}
+	}
+	p{
+		font-size: 1.4695767195767195VW;
+		color: $c1;
+		line-height: 130%;
+		text-align: center;
+		margin-bottom: 2%;
+	}
+	.packages{
+		text-align: center;
+		.package{
+			text-align: center;
+			width: 15.5%;
+		    margin: 0 1%;
+		    display: inline-block;
+		    vertical-align: top;
+			h2{
+				font-size: 2.0207231040564375VW;
+				font-family: KV;
+				color: #fff;
+				text-align: center;
+				border-radius: 18px;
+				padding: 3% 0;
+    			margin-bottom: 8%;
+			}
+			.pack-info{
+				border-radius: 18px;
+				text-align: left;
+				padding-top: 5%;
+    			padding-bottom: 8%;
+				ul{
+					list-style: none;
+					&:first-child{
+						margin-bottom: 10%;
+					}
+					li{
+						img{
+							display: inline-block;
+							vertical-align: middle;
+							margin-left: 5%;
+    						margin-right: 5%;
+    						width: 10%
+						}
+						span{
+							font-size: 1.1022927689594355VW;
+							color: $c1;
+							display: inline-block;
+							vertical-align: middle;
+							line-height: 130%;
+						}
+						.ivt{
+							padding-top: 3%;
+						}
+						.vt{
+							vertical-align: top;
+						}
+					}
+				}
+			}
+			button{
+				font-size: 1.4695767195767195VW;
+				font-family: KV;
+				color: #fff;
+				border-radius: 18px;
+				width: 100%;
+    			margin-top: 8%;
+    			padding: 6% 0;
+    			border: 0;
+			}
+		}
+		.package-1{
+			h2{
+				background: #e85673;
+			}
+			.pack-info{
+				border: 4px solid #c08b9f;
+				box-shadow: 0 0 0 9999px rgba(255,255,255,0.6) inset;
+				ul{
+					li{
+						p{
+							color: #e85673;
+							font: 1.1022927689594355VW KV;
+							margin-bottom: 0;
+						}
+					}
+				}
+			}
+			button{
+				background: #e85673;
+			}
+		}
+		.package-2{
+			h2{
+				background: #b64066;
+			}
+			.pack-info{
+				border: 4px solid #d16282;
+				box-shadow: 0 0 0 9999px rgba(249,225,235,0.9) inset;
+				ul{
+					li{
+						p{
+							color: #e85673;
+							font: 1.1022927689594355VW KV;
+							margin-bottom: 0;
+						}
+					}
+				}
+			}
+			button{
+				background: #b64066;
+			}
+		}
+		.package-3{
+			h2{
+				background: #872a4c;
+			}
+			.pack-info{
+				border: 4px solid #964d69;
+				box-shadow: 0 0 0 9999px rgba(255,169,31,0.8) inset;
+					li{
+						p{
+							color: #872a4c;
+							font: 1.1022927689594355VW KV;
+							margin-bottom: 0;
+						}
+						.span1{
+							color: #872a4c;
+							font-size: 1.3778659611992945VW;
+							font-family: KV;
+							width: 20%;
+    						text-align: center;
+						}
+						.span2{
+							color: #872a4c;
+							font-size: 1.1022927689594355VW;
+							font-family: KV;
+						}
+					}
+				}
+			}
+			button{
+				background: #872a4c;
+			}
+		}
+	}
+.b-12{
+	background: url(images/bg-12.png);
+	background-size: cover;
+	background-position: center;
+	padding-top: 5%;
+    padding-bottom: 5%;
+    position: relative;
+    .body3{
+    	position: absolute;
+    	bottom: 0;
+    	right: 21%;
+    	width: 21%;
+    }
+	.box-12-1{
+		h2{
+			font-size: 3.3068783068783065VW;
+			font-family: KV;
+			text-transform: uppercase;
+			color: #fff;
+			text-align: center;
+			margin-bottom: 3%;
+			max-width: 80%;
+		}
+		.block-12-1{
+			max-width: 47%;
+			margin-left: 20%;
+			border-radius: 18px;
+			box-shadow: 0 0 0 9999px rgba(255,255,255,0.6) inset;
+			padding: 2% 3%;
+			p{
+				color: $c1;
+				font-size: 1.4695767195767195VW;
+				line-height: 130%;
+				margin-bottom: 5%;
+				text-align: justify;
+				max-width: 70%;
+			}
+			.play-4{
+				max-width: 70%;
+    			text-align: center;
+				input[type='submit']{
+					font-size: 1.6536458333333333VW;
+				    margin-top: 0.6%;
+				    margin-bottom: 2.5%;
+				    max-width: 49.7%;
+				    padding: 1.9% 4.5%;
+				    text-align: center;
+				    color: #fff;
+				    font-family: KV;
+				    font-weight: bold;
+				    background: #b64066;
+				    border-radius: 20px;
+				    border: 0;
+				}
+				.left-b{
+					width: 8.5%;
+					margin-right: 3%;
+				}
+				.right-b{
+					width: 8.5%;
+					margin-left: 3%;
+				}
+			}
+		}
+	}
+}
+.b-13{
+	background: url(images/bg-13.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-top: 2.3%;
+    padding-bottom: 2.3%;
+	.b13-title{
+		background: #c14d77;
+		border-radius: 18px;
+		padding: 0.6% 2%;
+    	max-width: 48%;
+		margin: 0 auto;
+		text-align: center;
+		margin-bottom: 3%;
+		img{
+			vertical-align: middle;
+			display: inline-block;
+			margin: 0 2%;
+			width: 5%;
+		}
+		span{
+			vertical-align: middle;
+			display: inline-block;
+			color: #fff;
+			font-family: KV;
+			font-size: 2.0207231040564375VW;
+		}
+	}
+	.comments{
+		max-width: 54%;
+		text-align: center;
+		margin: 0 auto;
+		.c-video{
+			width: 46%;
+			margin: 0 1.5%;
+			margin-bottom: 2.8%;
+			background: #b64066;
+			display: inline-block;
+			iframe{
+				width: 100% !important;
+				height: 100% !important;
+			}
+		}
+		.comment{
+			border: 4px solid #d68498;
+			border-radius: 18px;
+			box-shadow: 0 0 0 9999px rgba(255,255,255,0.6) inset;
+			display: inline-block;
+			vertical-align: top;
+			margin: 0 1.5%;
+			margin-bottom: 3%;
+			max-width: 33%;
+			padding: 3%;
+			padding-top: 2%;
+			padding-bottom: 2%;
+			.avatar{
+				position: relative;
+				img{
+					width: 62%;
+				}
+				a{
+					position: absolute;
+					right: 20%;
+					bottom: 0;
+					width: 14%;
+					margin-bottom: 0;
+					img{
+						width: 100%;
+						max-width: 56px;
+					}
+				}
+			}
+			h2{
+				margin-bottom: 4%;
+				font: 1.2861552028218695VW KV;
+				color: #872a4c;
+				text-align: center;
+				text-decoration: none;
+			}
+			p{
+				font-size: 1.1022927689594355VW;
+				color: $c1;
+				text-align: justify;
+				margin-bottom: 8%;
+				line-height: 130%;
+			}
+			a{
+				color: #872a4c;
+				text-decoration: none;
+				font: 1.1022927689594355VW KV;
+			}
+		}
+		.comment-1{
+			.plast{
+				margin-bottom:24%;
+			}
+		}
+		.comment-4{
+			.plast{
+				margin-bottom: 15.4%;
+			}
+		}
+	}
+	.play-5{
+		max-width: 70%;
+		margin: 0 auto;
+    	text-align: center;
+		input[type='submit']{
+			font-size: 1.4695767195767195VW;
+		    margin-top: 1.5%;
+		    max-width: 49.7%;
+		    padding: 1.5% 3%;
+		    text-align: center;
+		    color: #fff;
+		    font-family: KV;
+		    font-weight: bold;
+		    background: #b64066;
+		    border-radius: 20px;
+		    border: 0;
+		}
+		.left-b{
+			width: 5.5%;
+			margin-right: 1%;
+		}
+		.right-b{
+			width: 5.5%;
+			margin-left: 1%;
+		}
+	}
+}
+.b-14{
+	background: url(images/bg-14.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	.body4{
+		position: absolute;
+		bottom: 0;
+		left: 21%;
+		width: 20.4%;
+	}
+	.box-14-1{
+		max-width: 40%;
+		margin-left: 44%;
+		padding-top: 5%;
+    	padding-bottom: 3%;
+		h2{
+			font: 2.204585537918871VW KV;
+			color: #fff;
+			max-width: 45%;
+			background: #b64066;
+			border-radius: 18px;
+			padding: 1.5%;
+			text-align: center;
+			margin-bottom: 9%;
+		}
+		p{
+			color: #51102a;
+			font-size: 1.6534391534391533VW;
+			margin-bottom: 5%;
+		}
+	}
+}
+.b-15{
+	background: url(images/b-15.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	text-align: center;
+	padding-top: 4%;
+    padding-bottom: 5%;
+	.box-15{
+		display: inline-block;
+		vertical-align: top;
+		margin: 0 3%;
+		img{
+			width: 35%;
+			margin-bottom: 8%;
+			max-width: 135px;
+		}
+		p{
+			font: 1.6534391534391533VW HL;
+			color: #fff;
+			text-shadow: 2px 2px 25px black;
+			margin-bottom: 5%;
+			line-height: 130%;
+		}
+	}
+	.box-15-3{
+		img{
+			width: 61%;
+    		margin-bottom: 14%;
+		}
+	}
+}
+.b-16{
+	background: url(images/bg-16.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-top: 2.2%;
+    padding-bottom: 4.5%;
+    position: relative;
+    .b-16-title{
+    	margin-bottom: 2%;
+    	text-align: center;
+    	img{
+    		display: inline-block;
+    		vertical-align: middle;
+    		width: 2.4%;
+    		margin: 0 1%;
+    	}
+    	h2{
+			color: #993156;
+			font: 2.204585537918871VW KV;
+			text-align: center;
+			display: inline-block;
+			vertical-align: middle;
+		}
+    }
+    .b-16-title2{
+    	text-align: center;
+    	margin-bottom: 3%;
+    	img{
+    		display: inline-block;
+    		vertical-align: middle;
+    		width: 2.4%;
+    		margin: 0 2%;
+    	}
+    	h3{
+			color: #b64066;
+			font: 2.204585537918871VW KV;
+			text-align: center;
+			display: inline-block;
+    		vertical-align: middle;
+		}
+    }
+	.body5{
+		margin-left: 14%;
+		margin-bottom: 2%;
+		width: 55.9%;
+	}
+	.face-1,.face-2,.face-3,.face-4,.face-5{
+		position: absolute;
+	}
+	.face-1{
+		right: 26%;
+    	top: 8%;
+    	width: 20%;
+	}
+	.face-2{
+		right: 18%;
+    	top: 20%;
+    	width: 20%;
+	}
+	.face-3{
+		right: 12%;
+   	 	top: 33%;
+   	 	width: 20%;
+	}
+	.face-4{
+		top: 44%;
+    	right: 18%;
+    	width: 20%;
+	}
+	.face-5{
+		top: 56%;
+    	right: 27%;
+    	width: 20%;
+	}
+	.serts{
+		text-align: center;
+		img{
+			margin: 0 1.5%;
+			width: 17%;
+		}
+	}
+}
+.b-17{
+	background: url(images/bg-17.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-top: 5%;
+    padding-bottom: 5%;
+	.box-17-1{
+		border-radius: 18px;
+		box-shadow: 0 0 0 9999px rgba(255,255,255,0.8) inset;
+		width: 35.4%;
+		margin-left: 42%;
+		padding: 2% 3%;
+		p{
+			color: #872a4c;
+			font-size: 1.6534391534391533VW;
+			text-align: justify;
+			line-height: 130%;
+			margin-bottom: 7%;
+		}
+		.play-6{
+			max-width: 70%;
+			margin: 0 auto;
+	    	text-align: center;
+	    	margin-bottom: 5%;
+			input[type='submit']{
+				font-size: 1.4695767195767195VW;
+			    margin-top: 1.5%;
+			    max-width: 100%;
+			    padding: 3.5% 8%;
+			    text-align: center;
+			    color: #fff;
+			    font-family: KV;
+			    font-weight: bold;
+			    background: #b64066;
+			    border-radius: 20px;
+			    border: 0;
+			}
+			.left-b{
+				width: 11.5%;
+				margin-right: 3%;
+			}
+			.right-b{
+				width: 11.5%;
+				margin-left: 3%;
+			}
+		}
+	}
+}
+.b-18{
+	background: url(images/b-18.png) no-repeat;
+	background-size: cover;
+	background-position: center;
+	text-align: center;
+	padding-top: 1.5%;
+    padding-bottom: 1.5%;
+	h2{
+		color: #872a4c;
+		font: 1.4695767195767195VW KV;
+		margin-bottom: 0.8%;
+	}
+	p{
+		color: #872a4c;
+		font-size: 1.1022927689594355VW;
+	}
+	.snippets{
+		vertical-align: middle;
+		padding: 1% 0;
+		img{
+			margin: 0 0.5%;
+			vertical-align: middle;
+			display: inline-block;
+			width: 2%;
+		}
+		.left-b{
+			margin-right: 1%;
+    		width: 3.5%;
+    		margin-top: -0.6%;
+		}
+		.right-b{
+			margin-left: 1%;
+    		width: 3.5%;
+    		margin-top: -0.6%;
+		}
+	}
+}
+footer{
+	background: #872a4c;
+	text-align: center;
+	padding: 1.5% 0;
+	a{
+		color: #fff;
+		font-size: 0.9184303350970017VW;
+		padding: 0 3%;
+		text-decoration: underline;
+		cursor: pointer;
+		&:hover{
+			color:#fff;
+		}
+	}
+	p{
+		font-size: 0.7350088183421518VW;
+		color: #fff;
+		margin-top: 1.5%;
+	}
+}
+/*Modal*/
+
+.modal-form {
+  display: none;
+  overflow-y: scroll;
+  width: 350px;
+  height: 300px;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  background: #ffffff;
+  z-index: 5; }
+.mf-1,.mf-2,.mf-3{
+  width: 400px;
+  height: 300px;	
+  overflow: hidden;
+  background: #091d34;
+  text-align: center;
+  padding-top: 20px;
+}
+div.wpcf7 .ajax-loader{
+	display:none !important;}
+.mf-1 p,.mf-2 p,.mf-3 p{
+	font: 15px Arial;
+	color: #fff;
+}
+.mf-1 p:first-child,.mf-2 p:first-child,.mf-3 p:first-child{
+	margin-bottom: 20px;}
+.mf-1 input,.mf-2 input,.mf-3 input{
+	color: #103959;
+	font-size: 13px;
+	margin-bottom: 12px;
+	width: 235px;
+	height: 30px;
+    border: 1px solid #acb0b5;
+	text-align: center;
+	background: #fff;}
+.mf-1 input[type="submit"],.mf-2 input[type="submit"],.mf-3 input[type="submit"]{
+	width: 156px;
+	height: 32px;
+	border: 1px solid #96202c;
+	font: 15px Arial;
+	color: #fff;
+	margin-top: 20px;
+	text-transform: uppercase;}
+.modal-form{
+  font-size:14px;
+  font-family:Arial;}
+.overlay {
+  display: none;
+  background: #000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  -moz-opacity: 0.3;
+  filter: alpha(opacity=30);
+  z-index: 3;
+  overflow: hidden; }
+
+.fm-run {
+  display: block; }
+
+/*Modal end*/
 @media screen and (max-width:1400px) and (min-width: 1200px){
 	input[type='submit']{
 		border-radius: 14px !important;
+	}
+	.b-11 .packages .package h2{
+		border-radius: 14px;
+	}
+	.b-11 .packages .package button{
+		border-radius: 14px;
+	}
+	.b-11 .packages .package .pack-info{
+		border-radius: 14px;
 	}
 }
 @media screen and (max-width:768px){
@@ -839,6 +1644,255 @@ h2,p,span,h1,h3,h4,h5,a{
 					font-size: 3.125VW;
 				}
 			}
+		}
+	}
+	.b-9{
+		p{
+			font-size: 2.8125VW;
+		}
+	}
+	.b-11 {
+		.b11-title{
+			img{
+				width: 3.4%;
+			}
+			h2{
+				font-size: 4.375VW;
+			}
+		}
+		p{
+			font-size: 2.8125VW;
+		}
+		.packages{
+			.package{
+				width: 30.5%;
+				h2{
+					font-size: 12px;
+    				border-radius: 7px;
+				}
+				.pack-info{
+					border: 2px solid #c08b9f;
+    				border-radius: 7px;
+    				ul{
+    					li{
+    						img{
+    							width: 8%;
+    						}
+    						span{
+    							font-size: 2.5VW;
+    						}
+    						p{
+    							font-size: 2.5VW;
+    						}
+    						.span1{
+								font-size: 2.5VW;
+    						}
+    						.span2{
+    							font-size: 2.5VW;
+    						}
+    					}
+    				}
+				}
+				button{
+					border-radius: 7px;
+    				font-size: 3.125VW;
+				}
+			}
+		}
+	}
+	.b-12 {
+		.body3{
+			right: 3%;
+    		width: 40%;
+		}
+		.box-12-1{
+			h2{
+				font-size: 4.375VW;
+			}
+			.block-12-1{
+				margin-left: 12%;
+    			max-width: 60%;
+    			border-radius: 7px;
+    			p{
+    				font-size: 3.125VW;
+    			}
+    			.play-4 {
+    				input[type='submit']{
+    					font-size: 3.125VW;
+    					max-width: 100%;
+    					border-radius: 7px;
+    				}
+    			}
+			}
+		}
+	}
+	.b-13 {
+		.b13-title{
+			max-width: 90%;
+    		padding: 1% 2%;
+    		span{
+    			font-size: 3.75VW;
+    		}
+		}
+		.play-5{
+			input[type='submit']{
+				max-width: 69.7%;
+				font-size: 3.125VW;
+				border-radius: 7px;
+			}
+		}
+		.comments{
+			max-width: 90%;
+			.comment{
+				max-width: 42%;
+			    margin: 0 0.5%;
+			    padding: 2%;
+			    border-width: 2px;
+			    margin-bottom: 5%;
+			    h2{
+			    	font-size: 3.75VW;
+			    }
+			    p{
+			    	font-size: 2.8125VW;
+			    }
+			    a{
+			    	font: 3.125VW KV;
+			    }
+			}
+			.comment-1{
+				.plast{
+					margin-bottom: 26%;
+				}
+			}
+			.comment-4{
+				.plast{
+					margin-bottom: 7.5%;
+				}
+			}
+		}
+	}
+	.b-14 {
+		.body4{
+			left: 0;
+			width: 26.4%;
+		}
+		.box-14-1 {
+			max-width: 73%;
+    		margin-left: 27%;
+			h2{
+				max-width: 65%;
+				font: 4.375VW KV;
+			}
+			p{
+				font-size: 2.8125VW;
+			}
+		}
+	}
+	.b-15 {
+		.box-15 {
+			p{
+				font-size: 2.8125VW;
+			}
+			img{
+				margin-bottom: 2%;
+			}
+		}
+		.box-15-3{
+			img{
+				width: 35%;
+				margin-bottom: 2%;
+			}
+		}
+	}
+	.b-16{
+		.b-16-title{
+			img{
+				width: 3.4%;
+			}
+			h2{
+				font-size: 4.375VW;
+			}
+		}
+		.b-16-title2{
+			img{
+				width: 3.4%;
+			}
+			h3{
+				font-size: 4.375VW;
+			}
+		}
+		.body5{
+			margin-left: 5%;
+    		margin-bottom: 2%;
+    		width: 75.9%;
+		}
+		.face-1{
+			right: 16%;
+    		top: 10%;
+    		width: 26%;
+		}
+		.face-2{
+			right: 7%;
+    		top: 21%;
+    		width: 26%;
+		}
+		.face-3{
+			right: 1%;
+    		top: 33%;
+    		width: 26%;
+		}
+		.face-4{
+			top: 47%;
+    		right: 7%;
+    		width: 26%;
+		}
+		.face-5{
+			top: 60%;
+    		right: 14%;
+    		width: 26%;
+		}
+		.serts{
+			img{
+				width: 21%;
+			}
+		}
+	}
+	.b-17 {
+		.box-17-1{
+			width: 57.4%;
+    		margin-left: 34%;
+    		border-radius: 7px;
+    		p{
+    			font-size: 3.125VW;
+    		}
+    		.play-6{
+    			max-width: 90%;
+    			input[type='submit']{
+    				font-size: 3.125VW;
+    				border-radius: 7px;
+    			}
+    		}
+		}
+	}
+	.b-18{
+		h2{
+			font-size: 3.75VW;
+		}
+		p{
+			font-size: 3.125VW;
+		}
+		.snippets{
+			img{
+				width: 5%;
+			}
+		}
+	}
+	footer{
+		a{
+			font-size: 2.1875VW;
+		}
+		p{
+			font-size: 1.875VW;
 		}
 	}
 }
