--- a/irina_larina/scss/style.scss
+++ b/irina_larina/scss/style.scss
@@ -420,8 +420,9 @@ h2,p,span,h1,h3,h4,h5,a{
 	}
 }
 .b-6{
-	background: url(images/bg-6.png);
+	background: url(images/bg-6.jpg);
 	background-size: 100%;
+	background-attachment: fixed;
 	text-align: center;
 	padding-top: 5%;
     padding-bottom: 4.4%;
@@ -610,8 +611,8 @@ h2,p,span,h1,h3,h4,h5,a{
 	}
 }
 .b-9{
-	background: url(images/bg-9.png) no-repeat;
-	/*background-attachment: fixed;*/
+	background: url(images/bg-9.jpg) no-repeat;
+	background-attachment: fixed;
 	padding-top: 7.5%;
 	padding-bottom: 7%;
 	p{
@@ -1114,9 +1115,10 @@ h2,p,span,h1,h3,h4,h5,a{
 	}
 }
 .b-15{
-	background: url(images/b-15.png) no-repeat;
+	background: url(images/b-15.jpg) no-repeat;
 	background-size: cover;
 	background-position: center;
+	background-attachment: fixed;
 	text-align: center;
 	padding-top: 4%;
     padding-bottom: 5%;
