--- a/irina_larina/scss/style.scss
+++ b/irina_larina/scss/style.scss
@@ -57,6 +57,13 @@ h2,p,span,h1,h3,h4,h5,a{
 		z-index: 2;
 		width: 21.2%;
 	}
+	.light{
+		position: absolute;
+		z-index: 1;
+		width: 81%;
+    	top: 0%;
+    	left: 16%;
+	}
 	.box-1-1{
 		text-align: center;
 		position: relative;
@@ -282,7 +289,7 @@ h2,p,span,h1,h3,h4,h5,a{
 	text-align: center;
 	padding-top: 3.9%;
     padding-bottom: 2.1%;
-	box-shadow: 0 0 0 9999px rgba(255,255,255,0.5) inset;
+	/*box-shadow: 0 0 0 9999px rgba(255,255,255,0.5) inset;*/
 	.b-4-1{
 		width: 45%;
 		display: inline-block;
@@ -426,7 +433,7 @@ h2,p,span,h1,h3,h4,h5,a{
 	text-align: center;
 	padding-top: 5%;
     padding-bottom: 4.4%;
-	box-shadow: 0 0 0 9999px rgba(48,17,46,0.5) inset;
+	/*box-shadow: 0 0 0 9999px rgba(48,17,46,0.5) inset;*/
 	.boxes-6{
 		margin-right: 3%;
     	margin-left: 3%;
@@ -1454,6 +1461,10 @@ div.wpcf7 .ajax-loader{
 		}
 		.cloud{
 			bottom: -13.3%;
+		}
+		.light{
+			width: 100%;
+    		left: 12%;
 		}
 	}
 	.b-2{
