--- a/irina_larina/scss/style.css
+++ b/irina_larina/scss/style.css
@@ -48,6 +48,12 @@ h2, p, span, h1, h3, h4, h5, a {
     bottom: -3%;
     z-index: 2;
     width: 21.2%; }
+  .b-1 .light {
+    position: absolute;
+    z-index: 1;
+    width: 81%;
+    top: 0%;
+    left: 16%; }
   .b-1 .box-1-1 {
     text-align: center;
     position: relative;
@@ -250,7 +256,7 @@ h2, p, span, h1, h3, h4, h5, a {
   text-align: center;
   padding-top: 3.9%;
   padding-bottom: 2.1%;
-  box-shadow: 0 0 0 9999px rgba(255, 255, 255, 0.5) inset; }
+  /*box-shadow: 0 0 0 9999px rgba(255,255,255,0.5) inset;*/ }
   .b-4 .b-4-1 {
     width: 45%;
     display: inline-block;
@@ -377,7 +383,7 @@ h2, p, span, h1, h3, h4, h5, a {
   text-align: center;
   padding-top: 5%;
   padding-bottom: 4.4%;
-  box-shadow: 0 0 0 9999px rgba(48, 17, 46, 0.5) inset; }
+  /*box-shadow: 0 0 0 9999px rgba(48,17,46,0.5) inset;*/ }
   .b-6 .boxes-6 {
     margin-right: 3%;
     margin-left: 3%;
@@ -1218,6 +1224,9 @@ div.wpcf7 .ajax-loader {
       width: 38.2%; }
     .b-1 .cloud {
       bottom: -13.3%; }
+    .b-1 .light {
+      width: 100%;
+      left: 12%; }
 
   .b-2 {
     background-size: cover;
