--- a/irina_larina/scss/style.css
+++ b/irina_larina/scss/style.css
@@ -820,7 +820,7 @@ h2, p, span, h1, h3, h4, h5, a {
     text-align: center;
     margin: 0 auto; }
     .b-13 .comments .c-video {
-      width: 46%;
+      width: 92%;
       margin: 0 1.5%;
       margin-bottom: 2.8%;
       background: #b64066;
@@ -828,6 +828,9 @@ h2, p, span, h1, h3, h4, h5, a {
       .b-13 .comments .c-video iframe {
         width: 100% !important;
         height: 100% !important; }
+        .b-13 .comments .c-video iframe .ytp-icon {
+          width: 48px;
+          height: 28px; }
     .b-13 .comments .comment {
       border: 4px solid #d68498;
       border-radius: 18px;
@@ -1199,6 +1202,10 @@ div.wpcf7 .ajax-loader {
   .left-b {
     margin-right: 1%; }
 
+  .ytp-icon-large-play-button-hover, .ytp-large-play-button {
+    width: 40px !important;
+    height: 30px !important; }
+
   .b-1 {
     background-size: cover; }
     .b-1 .box-1-1 {
@@ -1218,7 +1225,7 @@ div.wpcf7 .ajax-loader {
       .b-1 .box-1-1 input[type='text']::placeholder {
         font-size: 3.125VW; }
       .b-1 .box-1-1 input[type='submit'] {
-        font-size: 3.125VW;
+        font-size: 2.8125VW;
         border-radius: 7px; }
     .b-1 .body1 {
       left: 1.5%;
@@ -1226,15 +1233,17 @@ div.wpcf7 .ajax-loader {
     .b-1 .cloud {
       bottom: -13.3%; }
     .b-1 .light {
-      width: 100%;
-      left: 12%; }
+      width: 85%;
+      left: 15%;
+      height: 75%; }
 
   .b-2 {
     background-size: cover;
     background-position: center; }
     .b-2 .box-2-1 {
       max-width: 60%;
-      margin-left: 4.4%; }
+      margin-left: 4.4%;
+      padding-top: 3%; }
       .b-2 .box-2-1 h2 {
         font-size: 3.125VW; }
       .b-2 .box-2-1 h3 {
@@ -1245,7 +1254,7 @@ div.wpcf7 .ajax-loader {
       .b-2 .box-2-1 input[type='text']::placeholder {
         font-size: 3.125VW; }
       .b-2 .box-2-1 input[type='submit'] {
-        font-size: 3.125VW;
+        font-size: 2.8125VW;
         border-radius: 7px; }
 
   .b-3 {
@@ -1261,7 +1270,7 @@ div.wpcf7 .ajax-loader {
         font-size: 3.125VW;
         line-height: 100%; }
       .b-3 .box-3-1 input[type='submit'] {
-        font-size: 3.125VW;
+        font-size: 2.8125VW;
         max-width: 70%;
         border-radius: 7px; }
     .b-3 .box-3-2 img {
@@ -1302,14 +1311,15 @@ div.wpcf7 .ajax-loader {
         .b-5 .box-5-1 .block-5-1 p {
           font-size: 3.125VW; }
         .b-5 .box-5-1 .block-5-1 input[type='submit'] {
-          font-size: 3.125VW;
+          font-size: 2.8125VW;
           max-width: 70%;
           border-radius: 7px; }
 
   .b-6 {
     background: url(images/bg-6.png) no-repeat;
     background-size: cover;
-    background-position: center center; }
+    background-position: center center;
+    background-attachment: local; }
     .b-6 .boxes-6 p {
       font-size: 3.125VW; }
     .b-6 .boxes-6 span {
@@ -1337,10 +1347,10 @@ div.wpcf7 .ajax-loader {
       .b-7 .bouble-2 .b-text p, .b-7 .bouble-4 .b-text p {
         font-size: 2.5VW; }
     .b-7 .bouble-1 .b-text {
-      bottom: 20%; }
+      bottom: 18%; }
     .b-7 .bouble-2 .b-text {
       left: 5.5%;
-      bottom: 19%; }
+      bottom: 17%; }
     .b-7 .bouble-4 .b-text {
       left: 6%; }
     .b-7 .bouble-5 .b-text, .b-7 .bouble-3 .b-text {
@@ -1358,8 +1368,29 @@ div.wpcf7 .ajax-loader {
       .b-8 ul li span {
         font-size: 3.125VW; }
 
-  .b-9 p {
-    font-size: 2.8125VW; }
+  .b-9 {
+    background-attachment: local;
+    background-size: cover; }
+    .b-9 p {
+      font-size: 2.8125VW; }
+
+  .b-10 h2 {
+    font-size: 3.75VW;
+    border-radius: 7px;
+    max-width: 35%; }
+  .b-10 .b10-cont {
+    max-width: 95%; }
+    .b-10 .b10-cont .section p {
+      font-size: 2.03125VW; }
+    .b-10 .b10-cont .play-3 {
+      text-align: center;
+      width: 68%; }
+    .b-10 .b10-cont input[type='submit'] {
+      font-size: 2.5VW;
+      border-radius: 7px;
+      width: 50%; }
+    .b-10 .b10-cont .b10-video {
+      width: 44%; }
 
   .b-11 .b11-title img {
     width: 3.4%; }
@@ -1401,7 +1432,7 @@ div.wpcf7 .ajax-loader {
     .b-12 .box-12-1 .block-12-1 p {
       font-size: 3.125VW; }
     .b-12 .box-12-1 .block-12-1 .play-4 input[type='submit'] {
-      font-size: 3.125VW;
+      font-size: 2.8125VW;
       max-width: 70%;
       border-radius: 7px; }
 
@@ -1412,7 +1443,7 @@ div.wpcf7 .ajax-loader {
       font-size: 3.75VW; }
   .b-13 .play-5 input[type='submit'] {
     max-width: 75.7%;
-    font-size: 3.125VW;
+    font-size: 2.8125VW;
     border-radius: 7px; }
   .b-13 .comments {
     max-width: 90%; }
@@ -1445,13 +1476,15 @@ div.wpcf7 .ajax-loader {
     .b-14 .box-14-1 p {
       font-size: 2.8125VW; }
 
-  .b-15 .box-15 p {
-    font-size: 2.8125VW; }
-  .b-15 .box-15 img {
-    margin-bottom: 2%; }
-  .b-15 .box-15-3 img {
-    width: 35%;
-    margin-bottom: 2%; }
+  .b-15 {
+    background-attachment: local; }
+    .b-15 .box-15 p {
+      font-size: 2.8125VW; }
+    .b-15 .box-15 img {
+      margin-bottom: 2%; }
+    .b-15 .box-15-3 img {
+      width: 35%;
+      margin-bottom: 2%; }
 
   .b-16 .b-16-title img {
     width: 3.4%; }
@@ -1497,7 +1530,7 @@ div.wpcf7 .ajax-loader {
     .b-17 .box-17-1 .play-6 {
       max-width: 90%; }
       .b-17 .box-17-1 .play-6 input[type='submit'] {
-        font-size: 3.125VW;
+        font-size: 2.8125VW;
         border-radius: 7px;
         max-width: 70%; }
 
